# Parallel-Programming

Lab1/: CMakeLists.txt  main.c
Lab1/include/: OMPcheck.h  max.h  timeMax.h
Lab1/src/: OMPcheck.c  max.c  timeMax.c
MPI/Lab5/: CMakeLists.txt  main.c
MPI/Lab5/include/: MPIcheck.h  max.h  randomaizer.h  timeMax.h
MPI/Lab5/linux-build/: CMakeCache.txt  Lab5  Makefile  cmake_install.cmake
MPI/Lab5/src/: MPIcheck.c  max.c  randomaizer.c  timeMax.c
MPI/Lab6/: CMakeLists.txt  main.c
MPI/Lab6/include/: randomaizer.h  shellSort.h  timeShellSort.h
MPI/Lab6/src/: randomaizer.c  shellSort.c  timeShellSort.c
MPI/Lab6/tests/: CMakeLists.txt  lab6Tests.cpp
MPI/Lab6/tests/include/: isSorted.cpp
MPI/Lab7/: CMakeLists.txt  main.c
MPI/Lab7/include/: primeNumbers.h  timeAlgorithm.h
MPI/Lab7/src/: primeNumbers.c  timeAlgorithm.c
MPI/Lab7/tests/: CMakeLists.txt  test-main.cpp  test.cpp
MPI/shellsort/: CMakeLists.txt  main.cpp
OpenMP/Lab1/: CMakeLists.txt
OpenMP/Lab1/include/: OMPcheck.h  max.h  randomaizer.h  time_max.h
OpenMP/Lab1/src/: OMPcheck.c  main.c  max.c  randomaizer.c  time_max.c
OpenMP/Lab1/tests/: lab1_tests.cpp
OpenMP/Lab1/tests/Catch/: Catch2.h
OpenMP/Lab2/: CMakeLists.txt
OpenMP/Lab2/include/: ompCancellation.h  timeAlgorithm.h
OpenMP/Lab2/src/: main.cpp  ompCancellation.cpp  randomaizer.cpp  search.cpp  timeAlgorithm.cpp
OpenMP/Lab2/tests/: lab2Tests.cpp
OpenMP/Lab2/tests/Catch/: binarySearch.cpp
OpenMP/Lab3/: CMakeLists.txt  main.c
OpenMP/Lab3/include/: randomaizer.h  shellSort.h  timer.h
OpenMP/Lab3/linux-build/: CMakeCache.txt  Makefile  cmake_install.cmake
OpenMP/Lab3/linux-build/tests/: Lab3_tests  Makefile
OpenMP/Lab3/src/: main.c  randomaizer.c  shellSort.c  timer.c
OpenMP/Lab3/tests/: CMakeLists.txt  lab3Tests.cpp
OpenMP/Lab3/tests/Catch/: Catch2.h
OpenMP/Lab3/tests/src/: isSorted.cpp
OpenMP/Lab4/: CMakeLists.txt
OpenMP/Lab4/include/: checkOMP.h  lockExample.h  scheduleExample.h
OpenMP/Lab4/src/: check_omp.c  lockExample.c  main.c  scheduleExample.c
